# modbus-binding

./: .gitignore  CMakeLists.txt  MAINTAINERS  README.md  manifest.yml.in
.cache/clangd/index/: data-simulated.c.549BF90C7346D539.idx  data-simulated.c.BA693F9371BD382D.idx  kingpigeon-encoder.c.4DD0EAE6BF971E0A.idx  kingpigeon-encoder.c.53851FFE446699F2.idx  modbus-binding.c.22D72CC6FC52FB73.idx  modbus-binding.c.8662C63F1A5F3366.idx  modbus-binding.h.7E3577DE023AEEE6.idx  modbus-binding.h.8A46ED2244226C6F.idx  modbus-encoder.c.15AE809FF3110A4E.idx  modbus-encoder.c.9B19CF372C436DEF.idx  modbus-glue.c.6DCA30450FD359B5.idx  modbus-glue.c.9FDFD182FAC8515C.idx  raymarine-anenometer.c.8B46DBB14EA04A1F.idx  raymarine-anenometer.c.E6F6445BA5C8C0D5.idx  simulation.c.00C309412B41C62A.idx  simulation.c.3BCC05FC98231203.idx
conf.d/cmake/: 00-fedora-config.cmake  00-opensuse-config.cmake  01-ubuntu-config.cmake  config.cmake
conf.d/packaging/: modbus-binding.spec
conf.d/project/etc/: control-modbus_kingpigeon-config.json  control-modbus_raymarine-anemometer-config.json  control-modbus_seanatic-config.json  eastron-sdm72d.json
conf.d/wgt/: config.xml.in
config-samples/: control-modbus_kingpigeon-config.json  control-modbus_raymarine-anemometer-config.json  control-modbus_seanatic-config.json  eastron-sdm72d.json  example-multiple-rtus-same-link.json  r4dcb08-temperature.json  waveshare-relay.json
demo/: control-modbus-config.json  modbus-config.spec
docs/: 1-architecture_presentation.md  2-installation_guide.md  3-configuration.md  4-running_and_testing.md
simulation/: CMakeLists.txt  data-simulated.c  simulation.c
src/: CMakeLists.txt  modbus-binding.c  modbus-binding.h  modbus-encoder.c  modbus-glue.c
src/plugins/: LICENSE  kingpigeon-encoder.c  r4dcb08-temperature.c  raymarine-anenometer.c
src/plugins/kingpigeon/: kingpigeon-encoder.c
src/plugins/raymarine-anenometer/: raymarine-anenometer.c
